fixed spacing between buttons

--- a/static/main.css
+++ b/static/main.css
@@ -48,22 +48,21 @@
 	font-weight: bold;
 	padding-top: 15px;
 	border: 1px solid #b266ff;
-	margin: 5px;
+	margin: 3px;
 }
 
 .number-buttons:hover {
 	color: #fff;
 	background-color: #330066;
-	width: 15%;
+	width: 20%;
 	height: 45px;
 	text-align: center;
 	font-weight: bold;
 	padding-top: 15px;
 	border: 1px solid #b266ff;
-	margin: 5px;
+	margin: 3px;
 }
 
 .sections {
-	padding: 0px;
-	margin: 0px;
 }
+
